Tweaks and tablet view

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ select {
 .container {
   padding-inline: 1em;
   margin-inline: auto;
+  min-width: 290px;
   max-width: 23.438rem;
   width: 90%;
 }
@@ -242,6 +243,7 @@ body {
 
 .header {
   flex-direction: column;
+
   padding: 2rem 0;
 }
 
@@ -283,9 +285,11 @@ body {
 }
 
 .social {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: var(--gap, 1rem);
   margin: 1rem 0;
 }
 
@@ -425,6 +429,8 @@ body {
 .grid-div {
   grid-template-columns: repeat(1, 100%);
   grid-template-rows: auto;
+  justify-content: center;
+  align-items: center;
   margin: 1rem 0;
 }
 
@@ -448,11 +454,7 @@ body {
   margin-left: auto;
 }
 
-@media screen and (min-width: 1050px) {
-  .container {
-    max-width: 80rem;
-  }
-
+@media screen and (min-width: 700px) {
   .header {
     flex-direction: row;
     align-items: center;
@@ -468,9 +470,25 @@ body {
   }
 
   .social {
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(10rem, 19.25rem));
+    grid-template-rows: repeat(2, auto);
   }
 
+  .container {
+    max-width: 80rem;
+  }
+  .grid-div {
+    grid-template-columns: repeat(2, minmax(10rem, 19.25rem));
+    grid-template-rows: repeat(4, 8rem);
+  }
+}
+
+@media screen and (min-width: 1050px) {
+  .social {
+    display: flex;
+    flex-direction: row;
+  }
   .grid-div {
     grid-template-columns: repeat(4, minmax(10rem, 19.25rem));
     grid-template-rows: repeat(2, 8rem);
